@@ -29,9 +29,6 @@ import de.adorsys.ledgers.middleware.api.domain.general.RevertRequestTO;
 import de.adorsys.ledgers.middleware.api.domain.payment.AmountTO;
 import de.adorsys.ledgers.middleware.api.domain.payment.PaymentTO;
 import de.adorsys.ledgers.middleware.api.domain.payment.PaymentTargetTO;
-import de.adorsys.ledgers.middleware.api.domain.um.AccountAccessTO;
-import de.adorsys.ledgers.middleware.api.domain.um.ScaUserDataTO;
-import de.adorsys.ledgers.middleware.api.domain.um.UserRoleTO;
 import de.adorsys.ledgers.middleware.api.domain.um.UserTO;
 import de.adorsys.ledgers.middleware.client.mappers.PaymentMapperTO;
 import de.adorsys.ledgers.middleware.client.rest.DataRestClient;
@@ -61,8 +58,6 @@ class RestExecutionServiceTest {
     private static final String TPP_ID = "DE_12345678";
     private static final String ACCOUNT_ID = "ACCOUNT_ID";
     private static final String USER_IBAN = "DE89000000115555555555";
-    private static final String USER_ID = "USER_ID";
-    private static final String EMAIL = "EMAIL";
     private static final String LOGIN = "LOGIN";
 
     @InjectMocks
@@ -154,15 +149,10 @@ class RestExecutionServiceTest {
         target.setCreditorAgent("AAAADEBBXXX");
         target.setCreditorAddress(new AddressTO("WBG Straße", "56", "Nürnberg", "90543", "DE", null, null));
         target.setCreditorName("WBG");
-        target.setRemittanceInformationUnstructuredArray(List.of("Ref. Number WBG-1222"));
+        target.setRemittanceInformationUnstructuredArray(Collections.singletonList("Ref. Number WBG-1222"));
         ArrayList<PaymentTargetTO> targets = new ArrayList<>();
         targets.add(target);
         return targets;
-    }
-
-    private UserTO getUserTO() {
-        return new UserTO(USER_ID, LOGIN, EMAIL, "pin", Collections.singletonList(new ScaUserDataTO()), Collections.singletonList(new AccountAccessTO()),
-                          Collections.singletonList(UserRoleTO.CUSTOMER), "branch", false, false);
     }
 
     private RevertRequestTO getRevertRequest() {
